fixes hero stying and body padding, plus footer links

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
@@ -1,5 +1,5 @@
-<section class="newsroom-article-detail">	
-	<div class="container-fluid">
+<section class="newsroom-article-detail">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae consequatur laudantium iste provident aliquid dolores deserunt perspiciatis minus et, maiores ullam vitae, possimus nihil libero officiis vel esse aspernatur.</p>
@@ -15,6 +15,7 @@
 			<div class="col-md-4 newsroom-sidebar">
 				<div class="sidebar-profiles" id="experts">
 					<h3 class="text-center">Our Experts</h3>
+					<a href="#">
 					<div class="row sidebar-profile">
 						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
@@ -22,9 +23,10 @@
 						<div class="col-xs-9">
 							<h4>Expert Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
-							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
+							<p>Department of Chemistry</p>
 						</div>
 					</div>
+				</a>
 					<div class="row sidebar-profile">
 						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
