--- a/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
@@ -1,7 +1,7 @@
 
 // Large screen and bigger breakpoint
 @media only screen and (min-width: 1200px) {
-	body { padding-top: 150px; };
+	body { padding-top: 175px; };
 
 		.newsroom-navbar {
 					font-weight: 700;
@@ -114,10 +114,6 @@
 				.navbar-form {margin-top: 0px;};
 				.navbar-left {padding-top: 35px !important;};
 			};
-
-
-
-
 		}
 
 @media only screen and (min-width: 767px) {
@@ -186,14 +182,10 @@
     color: #fff;
 }
 	.newsroom-nav-container{
-		// background-color: $msu-blue;
 		.collapse {
 			border: none;
 			background: $msu-red;
-			// opacity: 0.9;
 			&.navbar-collapse {
-				// margin-right: -18px;
-				// margin-left: -18px;
 				padding: 15px 0px;
 			}
 		}
@@ -264,19 +256,11 @@
 	}
 	.news-hero {
 		.container {
-			top: -22px;
+			bottom: 0px;
 			margin-bottom: 0px;
 			.hero-tab {
 				background-color: rgba(0,0,0,1.0);
 				border-bottom: none;
-				.text-center {
-					text-align: left;
-				}
-			}
-			.description-tab {
-				.text-center {
-					text-align: left;
-				}
 			}
 		}
 	}
