--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -1,4 +1,5 @@
 .news-hero {
+	margin-bottom: 20px;
 	img {
 		width: 100%;
 		max-height: 1000px;
@@ -12,14 +13,15 @@
 		text-transform: uppercase;
 		color: #ffffff;
 		position: relative;
-		top: -161px;
-		margin-bottom: -161px;
+		bottom: 70px;
+		margin-bottom: -70px;
 		.hero-tab {
 			letter-spacing: 0.15em;
-			background-color: rgba(0,0,0,0.8);
-			padding-bottom: 20px;
+			background-color: rgba(0,0,0,0.9);
+			padding-bottom: 20px ;
+			padding-top:10px;
 			h1 {
-				font-size: 24px !important;
+				font-size: 22px !important;
 				font-weight: 700;
 				// padding: 5px 0px;
 			}
