--- a/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
@@ -7,8 +7,8 @@
 					<ul>
 						<li><a href="" class="">Subscribe</a></li>
 						<li><a href="mailto:red@msudenver.edu" class="">Submit a story</a></li>
-						<li><a href="mailto:red@msudenver.edumailto:red@msudenver.edu" class="">Send us feedback</a></li>
-						<li style="border-bottom: none;"><a href="mailto:red@msudenver.edu">Contact Us</a></li>
+						<li><a href="mailto:red@msudenver.edu" class="">Send us feedback</a></li>
+						<li style="border-bottom: none;"><a href="/about">About Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -31,7 +31,7 @@
 						</div>
 						<div class="col-xs-2">
 							<a alt="Facebook MSU Denver site" href="https://www.facebook.com/msudenver" target="_blank" aria-label="Facebook Icon"><span role="presentation" class="fa fa-facebook-f fa-2x"></span></a>
-						</div>			
+						</div>
 						<div class="col-xs-2">
 							<a alt="Instagram MSU Denver site" href="https://instagram.com/msu_denver" target="_blank" aria-label="Instagram Icon"><span role="presentation" class="fa fa-instagram fa-2x"></span></a>
 						</div>
