--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7819,6 +7819,9 @@ footer .footer-bottom .container .ptc .links a {
   font-weight: 500;
 }
 
+.news-hero {
+  margin-bottom: 20px;
+}
 .news-hero img {
   width: 100%;
   max-height: 1000px;
@@ -7832,16 +7835,17 @@ footer .footer-bottom .container .ptc .links a {
   text-transform: uppercase;
   color: #ffffff;
   position: relative;
-  top: -161px;
-  margin-bottom: -161px;
+  bottom: 70px;
+  margin-bottom: -70px;
 }
 .news-hero .container .hero-tab {
   letter-spacing: 0.15em;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   padding-bottom: 20px;
+  padding-top: 10px;
 }
 .news-hero .container .hero-tab h1 {
-  font-size: 24px !important;
+  font-size: 22px !important;
   font-weight: 700;
 }
 .news-hero .container .hero-tab h2 {
@@ -7888,7 +7892,7 @@ footer .footer-bottom .container .ptc .links a {
 /** Responsive Overrides **/
 @media only screen and (min-width: 1200px) {
   body {
-    padding-top: 150px;
+    padding-top: 175px;
   }
 
   .newsroom-navbar {
@@ -8116,18 +8120,12 @@ footer .footer-bottom .container .ptc .links a {
   }
 
   .news-hero .container {
-    top: -22px;
+    bottom: 0px;
     margin-bottom: 0px;
   }
   .news-hero .container .hero-tab {
     background-color: black;
     border-bottom: none;
-  }
-  .news-hero .container .hero-tab .text-center {
-    text-align: left;
-  }
-  .news-hero .container .description-tab .text-center {
-    text-align: left;
   }
 }
 /** specific breakpoint media query being used in Exceptional Case **/
