--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-elements.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-elements.scss
@@ -15,3 +15,8 @@ a.t4Edit-page {
 a.t4Edit-page:hover {
 	color: $msu-blue;
 };
+
+.content-inner a {
+	text-decoration: underline ;
+	color: #0072BC;
+};
