adds viewbook styles and fixes admissions resources

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -67,6 +67,11 @@ header {
 /** Responsive Overrides **/
 @import "admissionsHomepage/responsive-overrides.scss";
 
+
+/** Viewbook Styles **/
+@import "viewbook/background-panel.scss";
+
+
 /** Newsroom Homepage Styles **/
 
 /** Components **/
