--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
@@ -1,6 +1,6 @@
 <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
-		<div class="row">
+		<div class="col-xs-12">
 			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
 	</div>
