adds the letter "t" to conctact us footer for 1col-vendor

--- a/development/terminalfour/src/html/includes/vendor-includes/footer-vendor.html
+++ b/development/terminalfour/src/html/includes/vendor-includes/footer-vendor.html
@@ -8,7 +8,7 @@
                   <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
                   <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
                   <p>303-556-5740</p>
-                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contac Us</a></p>
+                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contact Us</a></p>
             </div>
             <div class="col-xs-12 col-md-5 privacy-statement">
                 <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a>  |  <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
