--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -4065,7 +4065,7 @@ tbody.collapse.in {
   margin-left: 2px;
   vertical-align: middle;
   border-top: 4px dashed;
-  border-top: 4px solid \9;
+  border-top: 4px solid \9 ;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
 }
@@ -4188,7 +4188,7 @@ tbody.collapse.in {
 .navbar-fixed-bottom .dropdown .caret {
   border-top: 0;
   border-bottom: 4px dashed;
-  border-bottom: 4px solid \9;
+  border-bottom: 4px solid \9 ;
   content: "";
 }
 .dropup .dropdown-menu,
@@ -8875,8 +8875,6 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
   padding-top: 2.5714285714rem;
   padding-bottom: 36px;
   padding-bottom: 2.5714285714rem;
-  background: url(../media/newsbg_mobile.jpg) no-repeat;
-  background-size: cover;
 }
 #homepage-news .feature-text {
   margin-bottom: 0;
@@ -8888,14 +8886,6 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
   text-decoration: none;
 }
 
-@media (max-width: 767px) {
-  .homepage-btn.homepage-btn__small {
-    font-size: 16px;
-    font-size: 1rem;
-    padding: 10px 20px;
-    padding: 0.625rem 1.25rem;
-  }
-}
 .home-news-features {
   position: relative;
   float: left;
@@ -8926,7 +8916,7 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
   clear: both;
 }
 
-.news-feature, .news-feature__large {
+.news-feature {
   position: relative;
   float: left;
   width: 100%;
@@ -8935,35 +8925,6 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
   padding-right: 0;
   padding-top: 15px;
   padding-top: 0.9375rem;
-}
-
-.news-features__small {
-  position: relative;
-  float: left;
-  width: 100%;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.news-feature__large {
-  padding-top: 0;
-}
-.news-feature__large p {
-  font-size: 22px;
-  font-size: 1.375rem;
-}
-
-.news-features__small-row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-.news-features__small-row:before, .news-features__small-row:after {
-  content: " ";
-  display: table;
-}
-.news-features__small-row:after {
-  clear: both;
 }
 
 .news-feature-bg {
@@ -8994,119 +8955,44 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
 }
 
 @media (min-width: 768px) {
-  .news-feature__large {
-    margin-bottom: 1.771479185119575%;
-  }
-  .news-feature__large .news-feature-image, .news-feature__large .news-feature-text {
-    float: left;
-  }
-  .news-feature__large .news-feature-image {
-    width: 58.3333333333%;
-    padding-right: 7.5px;
-  }
-  .news-feature__large .news-feature-text {
-    width: 41.6666666667%;
-    padding-left: 7.5px;
-  }
-
-  .news-features__small {
-    padding-top: 0;
-  }
-  .news-features__small .news-feature {
+  .news-feature {
     padding: 0;
-    width: 49.01055408970976%;
-    /* 758px - 15px gutter / 2 */
+    position: relative;
+    float: left;
+    width: 100%;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
-  .news-features__small .news-feature:first-child {
-    margin-right: 0.98944591029024%;
-    /* (15px gutter / 2) / 758px */
-  }
-  .news-features__small .news-feature:last-child {
-    margin-left: 0.98944591029024%;
-    /* (15px gutter / 2) / 758px */
+}
+@media (min-width: 992px) {
+  .news-feature {
+    position: relative;
+    float: left;
+    width: 33.3333333333%;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 @media (min-width: 1200px) {
   #homepage-news {
     padding: 50px 8.3333333333% 30px;
     padding: 3.5714285714rem 8.3333333333% 1.875rem;
-    background: url(../media/newsbg.jpg) no-repeat;
-    background-size: cover;
   }
 
-  .news-features {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
-  .news-feature__large {
+  .news-feature {
     position: relative;
-    min-height: 1px;
-    padding-left: 12.5px;
-    padding-right: 12.5px;
-    left: 42.5% !important;
-  }
-}
-@media (min-width: 1200px) and (min-width: 1200px) {
-  .news-feature__large {
     float: left;
-    width: 58.3333333333%;
-  }
-}
-@media (min-width: 1200px) and (min-width: 1200px) {
-  .news-feature__large {
-    left: 41.6666666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .news-feature__large .news-feature-image, .news-feature__large .news-feature-text {
-    float: none;
-    width: 100%;
-    padding: 0;
-  }
-  .news-feature__large .news-feature-heading {
-    font-size: 48px;
-    font-size: 3rem;
-    line-height: 1.2;
-    margin: 18px 0 16px;
-    margin: 1.125rem 0 1rem;
-  }
-  .news-feature__large p {
-    font-size: 36px;
-    font-size: 2.25rem;
-  }
-
-  .news-features__small-row {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-
-  .news-features__small {
-    position: relative;
+    width: 33.3333333333%;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
-  }
-}
-@media (min-width: 1200px) and (min-width: 1200px) {
-  .news-features__small {
-    float: left;
-    width: 41.6666666667%;
-  }
-}
-@media (min-width: 1200px) and (min-width: 1200px) {
-  .news-features__small {
-    right: 58.3333333333%;
-  }
-}
-@media (min-width: 1200px) {
-  .news-features__small .news-feature {
-    width: 100%;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 25px;
   }
-  .news-features__small .news-feature:last-child {
+  .news-feature:last-child {
     margin: 0;
   }
 
@@ -12866,9 +12752,9 @@ hr.pres-links {
 }
 
 .pres-button-interact {
-  display: ┬átable-cell;
-  vertical-align: ┬ámiddle;
-  text-align: ┬ácenter;
+  display:  table-cell;
+  vertical-align:  middle;
+  text-align:  center;
 }
 
 .president-page .form-group {
