--- a/www-root/includes/homepage-at-a-glance.html
+++ b/www-root/includes/homepage-at-a-glance.html
@@ -1,48 +1,59 @@
 <!-- ** Hompeage at a glance ** -->
-<section class="homepage-feature" id="homepage-at-a-glance"> 
+<section class="homepage-feature" id="homepage-at-a-glance">
     <div class="at-a-glance">
-        <h1 class="feature-heading-large">MSHU Denver at a glance</h1>
-        <p class="feature-text">Diverse. Transformative. Game-changing.</p>
+        <h1 class="feature-heading-large">Metrics that Matter</h1>
         <div class="at-a-glance-items">
             <div class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
-                    <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />    
+                    <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />
                 </div>
                 <div class="at-a-glance-text-wrap">
                     <p class="at-a-glance-stat">1 out of 5</p>
-                    <div class="at-a-glance-line"> 
-                        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">    
-                           <use xlink:href="/style-assets/media/defs/svg/sprite.defs.svg#line" />
-                        </svg>
-                    </div>
-                    <p class="at-a-glance-text">Colorado graduates choose MSU Denver</p>    
-                </div>    
+                    <p class="at-a-glance-text">Colorado graduates choose MSU Denver</p>
+                </div>
             </div><!-- / .ata-glance-item (col) -->
             <div class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
-                    <img src="style-assets/media/degrees.png" alt="31.6% first-generation college students"  />    
+                    <img src="style-assets/media/degrees.png" alt="31.6% first-generation college students"  />
                 </div>
                 <div class="at-a-glance-text-wrap">
                     <p class="at-a-glance-stat">31.6%</p>
-                    <div class="at-a-glance-line"> 
-                        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">    
-                           <use xlink:href="/style-assets/media/defs/svg/sprite.defs.svg#line" />
-                        </svg>
-                    </div>
                     <p class="at-a-glance-text">First-generation college students</p>
                 </div>
             </div><!-- / .at-a-glance-item (col) -->
             <div class="at-a-glance-item">
-                <div class="at-a-glance-img" data-mh="at-a-glance-img"> 
-                    <img src="style-assets/media/firstgen.png" alt="67 bachelor degree choices"  /> 
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
+                    <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />
+                </div>
+                <div class="at-a-glance-text-wrap">
+                    <p class="at-a-glance-stat">1 out of 5</p>
+                    <p class="at-a-glance-text">Colorado graduates choose MSU Denver</p>
+                </div>
+            </div>
+            <div class="at-a-glance-item">
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
+                    <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />
+                </div>
+                <div class="at-a-glance-text-wrap">
+                    <p class="at-a-glance-stat">1 out of 5</p>
+                    <p class="at-a-glance-text">Colorado graduates choose MSU Denver</p>
+                </div>
+            </div>
+            <div class="at-a-glance-item">
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
+                    <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />
+                </div>
+                <div class="at-a-glance-text-wrap">
+                    <p class="at-a-glance-stat">1 out of 5</p>
+                    <p class="at-a-glance-text">Colorado graduates choose MSU Denver</p>
+                </div>
+            </div>
+            <div class="at-a-glance-item">
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
+                    <img src="style-assets/media/firstgen.png" alt="67 bachelor degree choices"  />
                 </div>
                 <div class="at-a-glance-text-wrap">
                     <p class="at-a-glance-stat">67</p>
-                    <div class="at-a-glance-line"> 
-                        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">    
-                           <use xlink:href="/style-assets/media/defs/svg/sprite.defs.svg#line" />
-                        </svg>
-                    </div>
                     <p class="at-a-glance-text">Bachelor degree choices</p>
                 </div>
             </div><!-- / .at-a-glance-item (col) -->
@@ -54,12 +65,12 @@
                     if (els) {
                         var h = 0;
                         els.forEach(function(el, idx) {
-                           
+
 //                            console.log(el);
 //                            console.log(el.offsetHeight);
 
                             if (el.offsetHeight > h) {
-                                h = el.offsetHeight;  
+                                h = el.offsetHeight;
                             }
                             /*console.log(h);*/
                         });
@@ -68,17 +79,17 @@
                                 el.style.height = h+'px';
                             });
                         }
-                    } 
-                    
+                    }
+
                 }
                 heightDoer('.at-a-glance-img');
 //                window.onresize = function() {
 //                    console.log('resize');
 //                    heightDoer('.at-a-glance-img');
 //                }
-                
+
             }) (window);
         </script>
     </div><!-- / .at-a-glance (col) -->
 </section>
-<!-- ** // Hompeage at a glance ** --> 
+<!-- ** // Hompeage at a glance ** -->
