--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -1,50 +1,45 @@
     <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
-        <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
-        <p class="feature-text">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
-        <div class="news-features">
-             <!-- featured featured news item -->
+        <h1 class="feature-heading-large">RELEVANT. ESSENTIAL. DENVER.</h1>
+          <div class="news-features">
             <!-- regular featured news items -->
                      <div class="news-feature">
-                         <div class="news-feature-bg">
                             <a href="javascript:void(0)">
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
+                                 <h2 class="feature-heading news-feature-heading">Chart topper</h2>
+                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
                              </div>
                              </a>
-                         </div>
                      </div>
                      <div class="news-feature">
-                         <div class="news-feature-bg">
                             <a href="javascript:void(0)">
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
+                                 <h2 class="feature-heading news-feature-heading">Redefining working class</h2>
+                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
                              </div>
                              </a>
-                         </div>
                      </div>
                      <div class="news-feature">
-                         <div class="news-feature-bg">
                             <a href="javascript:void(0)">
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
+                                 <h2 class="feature-heading news-feature-heading">The man behind the mic</h2>
+                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
                              </div>
                              </a>
-                         </div>
                      </div><!-- ./ .news-feature-item -->
 
         </div><!-- ./ .news-feature-items -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more roadrunner stories</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
+        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more RED stories</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
