cleansup unused header sass styles and fixes logo resizing

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -70,9 +70,9 @@ header {
 /** Newsroom Homepage Styles **/
 
 /** Components **/
-@import "newsroomHomepage/newsroom-nav.scss";
+// @import "newsroomHomepage/newsroom-nav.scss";
 /** Responsive Overrides **/
-@import "newsroomHomepage/responsive-overrides.scss";
+// @import "newsroomHomepage/responsive-overrides.scss";
 
 
 /** President's page styles **/
