updates homepage button

--- a/development/terminalfour/src/html/includes/homepage-events.html
+++ b/development/terminalfour/src/html/includes/homepage-events.html
@@ -81,12 +81,10 @@
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
-            
+
         </div><!-- // .home-events-row -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all events</a></button>
     </div><!-- // .home-events (col) -->
-    
+
 </section>
 <!-- ** .// Homepage events ** -->
-
-
