--- a/development/terminalfour/src/html/includes/homepage-news.html
+++ b/development/terminalfour/src/html/includes/homepage-news.html
@@ -39,7 +39,7 @@
                      </div><!-- ./ .news-feature-item -->
 
         </div><!-- ./ .news-feature-items -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more RED stories</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more RED stories</a> </button>
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
