--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -102,7 +102,6 @@ ul.nav.navbar-nav li .visit-give-mobile {
   background: $gray;
   color: $white;
   font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
   margin: 0.75em 0.25em 0em 0em;
   text-align: center;
   width: 99%;
@@ -122,7 +121,6 @@ ul.nav.navbar-nav li .visit-give-mobile {
   background: #d11242;
   color: white;
   font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
   margin: 0.75em 0.25em 0.4em 0em;
   text-align: center;
   width: 99%;
@@ -357,7 +355,7 @@ span.fa.fa-search.search-desktop {
   background: #555555;
   color: #fff;
   font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
+  border-radius: 0px;
   margin: 0.75em 0.25em 0em 0em;
   text-align: center;
   width: 99%;
@@ -703,7 +701,6 @@ body{
     text-transform: uppercase;
     width: 9% !important;
     top: -110px;
-    border-radius: 0 0 10px 10px !important;
     padding: 0.3em 1.2em !important;
   }
   .visit-give-mobile, .apply-mobile {
@@ -839,21 +836,18 @@ body{
       right: 27.77%;
       width: 9% !important;
       top: -110px;
-      border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.give-mobile {
       right: 18.6%;
       width: 9% !important;
       top: -110px;
-      border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.apply-mobile {
       right: 9.4%;
       width: 9% !important;
       top: -110px;
-      border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
 
