--- a/www-root/includes/homepage-community.html
+++ b/www-root/includes/homepage-community.html
@@ -1,6 +1,6 @@
 <section class="homepage-feature" id="homepage-community">
     <div class="hompage-community ">
         <h1 class="feature-heading-large">What's Possible on a Dynamic Campus in the Hearth of the City</h1>
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">Take our Virtual Tour</a></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">Take our Virtual Tour</a></button>
     </div>
 </section>
