html includes re-org
Moves CVA and President html includes to corresponding folders for organization

--- a/development/terminalfour/src/html/includes/homepage-events.html
+++ b/development/terminalfour/src/html/includes/homepage-events.html
@@ -2,87 +2,13 @@
 <section class="homepage-feature" id="homepage-events">
     <div class="home-events">
         <h1 class="feature-heading-large">What's happening right now at MSU Denver</h1>
-        <div class="home-events-row">
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                        <h2 class="home-event-title">New Student Convocation</h2>
-                        <p class="home-event-date">August 18th at 5:30 PM</p>
-                        <hr />
-                        <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                        <h2 class="home-event-title">New Student Convocation</h2>
-                        <p class="home-event-date">August 18th at 5:30 PM</p>
-                        <hr />
-                        <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
 
-        </div><!-- // .home-events-row -->
+            <div class="home-event">
+                   <a href="javascript:void(0)">
+                    <p><span class="home-event-title">August 18th at 5:30 PM </span> <span class="home-event-date">New Student Convocation </span> </p>
+                    </a>
+            </div>
+
         <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all events</a></button>
     </div><!-- // .home-events (col) -->
 
