--- a/development/terminalfour/src/html/includes/homepage-feature-caption.html
+++ b/development/terminalfour/src/html/includes/homepage-feature-caption.html
@@ -1,20 +1,20 @@
 <section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
         <!-- Carousel sample one -->
-        <div class="homepage-feature-caption-item item ">
+        <div class="homepage-feature-caption-item item active">
           <div class="col-xs-12 col-md-6 col-md-push-6"> <img class="image-responsive" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
           </div>
-            <div class="col-xs12 col-md-6 col-md-pull-6">
+            <div class="col-xs-12 col-md-5 col-md-pull-5">
                 <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item Refresh ]]</code></h1>
                 </div>
         </div>
         <!-- Caurusel sample two -->
-        <div class="homepage-feature-caption-item item active ">
-            <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
-            <div class="homepage-feature-caption-text carousel-caption">
-                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item Old ]]</code></h1>
-
-            </div>
+        <div class="homepage-feature-caption-item item">
+          <div class="col-xs-12 col-md-6 col-md-push-6"> <img class="image-responsive" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
+          </div>
+            <div class="col-xs-12 col-md-5 col-md-pull-5">
+                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item Refresh ]]</code></h1>
+                </div>
         </div>
     </div>
     <a class="left carousel-control" href="#homepage-feature-caption" role="button" data-slide="prev">
