--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -10829,12 +10829,23 @@ hr.style-one {
 
 .hero {
   position: relative;
-  margin-bottom: 15px;
-  background: rgba(0, 0, 0, 0.5);
 }
 
-.content .hero > .img-responsive {
+.hero p {
+  padding: 0 2%;
+}
+
+.hero span > :first-child {
+  padding-top: 2% !important;
+}
+
+.hero span > :last-child {
+  padding-bottom: 2% !important;
+}
+
+.hero > .img-responsive {
   margin-bottom: 0px;
+  width: 100%;
 }
 
 .hero-caption {
@@ -10864,6 +10875,19 @@ hr.style-one {
     right: 0;
     left: auto;
     bottom: 0 !important;
+    padding: 2%;
+  }
+
+  .hero p {
+    padding: inherit;
+  }
+
+  .hero span > :first-child {
+    padding-top: inherit;
+  }
+
+  .hero span > :last-child {
+    padding-bottom: inherit;
   }
 }
 .byline,
@@ -10973,31 +10997,32 @@ hr.style-one {
   border: 1px solid #d63647;
 }
 
-#site-header {
+.siteheader {
+  color: #fff;
   background: #003a6e;
   margin-bottom: 25px;
   background-size: 100%;
 }
-#site-header a:hover, #site-header a:active, #site-header a:focus {
-  text-decoration: underline;
-  font-weight: 700;
-}
-#site-header .siteheader {
-  color: #fff;
-}
-#site-header .breadcrumb {
+
+.breadcrumb {
   background-color: rgba(255, 255, 255, 0);
   border-radius: 0;
   padding: 0;
 }
-#site-header ul.breadcrumb {
+.breadcrumb a:hover, .breadcrumb a:active, .breadcrumb a:focus {
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+ul.breadcrumb {
   color: #fff;
   font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
   font-size: 1em;
   font-style: normal;
   font-weight: 400;
 }
-#site-header ul.breadcrumb a {
+
+ul.breadcrumb a {
   color: #fff;
   font-weight: 700;
 }
@@ -11005,7 +11030,7 @@ hr.style-one {
 @media (max-width: 992px) {
   .siteheader {
     text-align: right;
-    padding-right: 10px;
+    padding-right: 15px;
   }
 }
 body {
@@ -11227,39 +11252,6 @@ a.t4Edit-page:hover {
   padding-left: 0px;
 }
 
-.hero-caption {
-  color: #fff;
-  right: 0;
-  bottom: 0;
-  position: static !important;
-  background: #000;
-  margin: 0;
-  font-size: 16.1px;
-  font-weight: 100;
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  bottom: auto !important;
-  padding: 0%;
-}
-
-.hero-caption h1, .hero-caption h2, .hero-caption h3, .hero-caption h4, .hero-caption h5, .hero-caption h6 {
-  color: #fff;
-  font-weight: 700;
-  font-size: 1.75rem;
-}
-
-.hero p {
-  padding: 0 2%;
-}
-
-.hero span > :first-child {
-  padding-top: 2% !important;
-}
-
-.hero span > :last-child {
-  padding-bottom: 2% !important;
-}
-
 h2 {
   font-weight: 700;
   color: #00447c;
@@ -11284,30 +11276,6 @@ h4 {
   line-height: 1.3;
 }
 
-@media screen and (min-width: 992px) {
-  .hero-caption {
-    width: 40%;
-    float: right;
-    position: absolute !important;
-    top: inherit;
-    right: 0;
-    left: auto;
-    bottom: 0 !important;
-    padding: 2%;
-  }
-
-  .hero p {
-    padding: inherit;
-  }
-
-  .hero span > :first-child {
-    padding-top: inherit;
-  }
-
-  .hero span > :last-child {
-    padding-bottom: inherit;
-  }
-}
 .card {
   background: #fff;
   padding: 1em;
